[tool.poetry]
name = "netaudio"
version = "0.0.2"
description = "List, configure, and control Dante network audio devices without Dante Controller"
authors = ["Christopher Ritsen <chris.ritsen@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Bencosterton/network-audio-controller"
packages = [{include = "netaudio"}]

[tool.poetry.dependencies]
python = "^3.9"
cleo = "0.8.1"  
netifaces = "^0.11.0"
twisted = "^22.1.0"
zeroconf = "^0.38.3"
clikit = "0.6.2"  
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
sqlitedict = "^1.7.0"
redis = "^4.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
netaudio = "netaudio.console.application:main"
